k8s/poker-backend-service-lb.yaml
apiVersion: v1
kind: Service
metadata:
  name: poker-calculator-backend-lb
  labels:
    app: poker-calculator-backend
spec:
  type: LoadBalancer
  ports:
  - port: 8080
    targetPort: 8080
    protocol: TCP
    name: http
  selector:
    app: poker-calculator-backend
