k8s/poker-frontend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: poker-calculator-frontend
  labels:
    app: poker-calculator-frontend
spec:
  type: LoadBalancer
  ports:
  - port: 80
    targetPort: 80
    protocol: TCP
    name: http
  selector:
    app: poker-calculator-frontend
